refactor: remove succeeded attribute from the Result class (#26)